Update authenticator app setup page

--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -1,3 +1,11 @@
+.circle-number {
+  font-size: 13px;
+  font-weight: bold;
+  height: 20px;
+  text-align: center;
+  width: 20px;
+}
+
 .teal-dots {
   list-style: none;
   padding: 0;
