--- a/app/assets/stylesheets/components/_space-misc.scss
+++ b/app/assets/stylesheets/components/_space-misc.scss
@@ -21,6 +21,7 @@
 
 @media #{$breakpoint-sm} {
   .sm-mr-20p { margin-right: 20px; }
+  .sm-ml-28p { margin-left: 28px; }
   .sm-mtn2 { margin-top: -$space-2; }
   .sm-mtn3 { margin-top: -$space-3; }
 }
