--- a/app/views/sign_up/registrations/_sp_registration_heading.html.slim
+++ b/app/views/sign_up/registrations/_sp_registration_heading.html.slim
@@ -1,5 +1,5 @@
 h1.h3.mb3.blue.regular
   strong
-    = t('headings.create_account_with_sp.sp_text', sp: decorated_session.sp_name)
-    '
-  = t('headings.create_account_with_sp.app_text')
+    = decorated_session.sp_name
+  '
+  = t('headings.create_account_with_sp.sp_text')
