--- a/app/views/sign_up/registrations/show.html.slim
+++ b/app/views/sign_up/registrations/show.html.slim
@@ -1,17 +1,17 @@
 - title t('titles.registrations.start')
 
-.px4.mt2.mb0.center
+.sm-px4.mt2.mb0.center
   = image_tag(asset_url('user-access.svg'), width: '352', alt: '')
 
   = render decorated_session.registration_heading
 
   = link_to t('sign_up.registrations.create_account'),
     sign_up_email_path(request_id: params[:request_id]),
-    class: 'sm-col-10 col-12 btn btn-primary btn-wide mb1 fs-20p'
+    class: 'sm-col-10 col-12 btn btn-primary btn-wide mb2 fs-20p'
 
   = link_to t('links.sign_in'),
     new_user_session_path(request_id: params[:request_id]),
-    class: 'sm-col-10 col-12 btn btn-secondary btn-wide mb1 fs-20p'
+    class: 'sm-col-10 col-12 btn btn-secondary btn-wide mb2 fs-20p'
 
 - if loa3_requested?
   = render 'required_pii_accordion'
