Redirect user with a pending profile to /account
**Why**: Previously, users would be continuously redirected to the
/verify page if they choose to have their account verified by mail,
which could be confusing.

--- a/app/views/shared/_personal_key_confirmation_modal.html.slim
+++ b/app/views/shared/_personal_key_confirmation_modal.html.slim
@@ -7,7 +7,7 @@
       #personal-key-alert.alert.alert-alert.display-none(role='alert')
         = t('users.personal_key.confirmation_error')
 
-      form(id='confirm-key' method='post' action="#{sign_up_personal_key_path}" name="key-confirm")
+      form(id='confirm-key' method='post' action="#{update_path}" name="key-confirm")
         input(
           aria-label="#{t('forms.personal_key.confirmation_label')}"
           maxlength="#{code.length}"
