--- a/app/views/shared/_personal_key.html.slim
+++ b/app/views/shared/_personal_key.html.slim
@@ -21,6 +21,6 @@ p.mt-tiny.mb0
           class: 'btn btn-primary btn-wide mb1 personal-key-continue',
           'data-toggle': 'modal'
 
-= render 'shared/personal_key_confirmation_modal', code: code
+= render 'shared/personal_key_confirmation_modal', code: code, update_path: update_path
 
 == javascript_include_tag 'misc/personal-key-page-controller'
