--- a/app/views/sign_up/completions/show.html.slim
+++ b/app/views/sign_up/completions/show.html.slim
@@ -6,6 +6,12 @@
                           width: 146, alt: '', class: 'mb1')
     h1.h3.mb3.my0 = t("titles.loa3_verified.#{session[:sp][:loa3]}", app: APP_NAME)
 
+    = t('help_text.requested_attributes.intro', app_name: APP_NAME, sp: decorated_session.sp_name)
+    ul.requested-attributes
+      - session[:sp][:requested_attributes].each do |attribute|
+        li
+          = t("help_text.requested_attributes.#{attribute}")
+
     = button_to t('forms.buttons.continue_to', sp: decorated_session.sp_name), \
                 sign_up_completed_path, \
                 class: 'btn btn-wide px2 py1 rounded-lg border border-green bw2'
