Add feature flag to prepopulate USPS code
**Why**: To make it easier to test mailing address verification without
having to actually wait to receive a letter from the USPS or having to
grab your code from the database.

The field will be prepopulated by default in development, and on the
following productions servers: dev, int, qa.

--- a/app/views/users/verify_account/index.html.slim
+++ b/app/views/users/verify_account/index.html.slim
@@ -7,6 +7,5 @@ p.mt-tiny.mb0 = t('forms.verify_profile.instructions')
   html: { autocomplete: 'off', method: :post, role: 'form' }) do |f|
   = f.error :base
   = f.input :otp, required: true, label: t('forms.verify_profile.name'), wrapper: :inline_form do
-    = f.input_field :otp, as: :inline, autofocus: true, type: 'text', maxlength: '10'
+    = f.input_field :otp, as: :inline, autofocus: true, type: 'text', maxlength: '10', value: @code
     = f.button :submit, t('forms.verify_profile.submit')
-  end
