--- a/app/assets/stylesheets/components/all.scss
+++ b/app/assets/stylesheets/components/all.scss
@@ -10,6 +10,7 @@
 @import 'icon';
 @import 'list';
 @import 'modal';
+@import 'nav';
 @import 'password';
 @import 'profile-section';
 @import 'personal-key';
