--- a/app/views/shared/_nav_lite.html.slim
+++ b/app/views/shared/_nav_lite.html.slim
@@ -1,4 +1,4 @@
-nav.py2.sm-pt4.sm-pb0.bg-light-blue.center
+nav.nav-nonbranded.vertical-align.bg-light-blue.center
   = link_to \
-    image_tag(asset_url('logo.svg'), width: 181, alt: APP_NAME, class: 'align-bottom'),
-    root_path, class: 'p1 sm-p0 inline-block'
+    image_tag(asset_url('logo.svg'), height: 14, alt: APP_NAME, class: 'align-middle'),
+    root_path, class: 'inline-block align-middle'
