--- a/app/views/accounts/_password_reset.html.slim
+++ b/app/views/accounts/_password_reset.html.slim
@@ -1,3 +1,4 @@
 .mb4.alert.alert-warning
   p = t('account.index.reactivation.instructions')
-  p.mb0 = link_to t('account.index.reactivation.reactivate_button'), reactivate_account_path
+  p.mb0 = link_to t('account.index.reactivation.personal_key'), reactivate_account_path
+  p.mb0.mt2 = link_to t('account.index.reactivation.reverify'), verify_path
