Add sign out link to account page on mobile

--- a/app/views/accounts/_header.html.slim
+++ b/app/views/accounts/_header.html.slim
@@ -1,4 +1,4 @@
-.clearfix.py2.sm-py0.mb2.bg-light-blue.sm-bg-none
+.clearfix.py2.sm-py0.mb2.bg-lightest-blue.sm-bg-none
   .sm-col.sm-col-8
     h2.h3.my0.mx2.center.sm-left-align
       .sm-hide.regular.sans-serif.inline
