--- a/app/views/accounts/_pii.html.slim
+++ b/app/views/accounts/_pii.html.slim
@@ -1,8 +1,8 @@
 .mb3.profile-info-box
-  .bg-light-blue.py1.px2.h6.caps.clearfix
+  .bg-lightest-blue.py1.px2.h6.caps.clearfix
     .col.col-11
       = t('headings.account.profile_info')
-      = image_tag asset_url('user.svg'), width: 8, class: 'ml1 mt-tiny'
+      = image_tag asset_url('user.svg'), width: 8, class: 'ml1'
     .col.col-1.right-align
       = image_tag asset_url('lock.svg'), width: 8, class: 'mr1'
   .p2
