--- a/app/views/accounts/_verified_header.html.slim
+++ b/app/views/accounts/_verified_header.html.slim
@@ -1,4 +1,4 @@
-.clearfix.pt2.pb3.sm-py0.mb3.bg-light-blue.sm-bg-none
+.clearfix.pt2.pb3.sm-py0.mb3.bg-lightest-blue.sm-bg-none
   .sm-col.sm-col-8
     h2.h3.m0.center.sm-left-align
       span.regular.sans-serif.sm-hide
