--- a/app/assets/stylesheets/components/_profile-section.scss
+++ b/app/assets/stylesheets/components/_profile-section.scss
@@ -3,6 +3,11 @@
   border-bottom: $border-width solid $border-color;
   border-radius: 0;
   margin-bottom: 0;
+
+  .bg-lightest-blue img {
+    margin-top: -2px;
+    vertical-align: middle;
+  }
 }
 
 @media #{$breakpoint-sm} {
