Add errors to FormResponse in PersonalKeyForm
**Why**: To better adhere to our conventions of returning an error
object from from objects

Return regex object from PersonalKeyFormatter

**Why**: The method .regexp on PersonalKeyFormatter seems like it should
return an actual regex and not a string

**How**: Make two methods, one for use by ruby, returning the object,
and one for use on the client, returning a string.

Use class methods instead of new

**Why**: This is simpler, instantiation wasn't really needed

--- a/app/views/shared/_personal_key_confirmation_modal.html.slim
+++ b/app/views/shared/_personal_key_confirmation_modal.html.slim
@@ -14,7 +14,7 @@
           autocomplete='off'
           class='col-12 mb4 border-dashed field monospace personal-key caps'
           name="personal-key"
-          pattern="^#{PersonalKeyFormatter.new.regexp}$"
+          pattern="^#{PersonalKeyFormatter.regexp_string}$"
           required=true
           spellcheck='false'
           type='text')
