Reanme reveal_usps_code to `flow`
**Why**: The entire flow will be conditionally available, so tying the
code visibility to the availability of the feature makes sense

Gate usps pages, verify/phone view + specs update

**Why**: Users shouldnt have the option to verify by mail if the feature
is turned off, and they shouldnt be able to directly access the pages

Address PR feedback

**Why**: There are improvements to be made
* Use Figaro config setting
* Change name to better match identity_verification flag
* Adds route spec
* Removes checks on controller level

--- a/app/views/verify/phone/new.html.slim
+++ b/app/views/verify/phone/new.html.slim
@@ -26,8 +26,7 @@ em
     wrapper_html: { class: 'inline-block mr2' }
   = f.button :submit, t('forms.buttons.continue')
 
-p
-  = t('idv.form.no_alternate_phone_html',
-    link: link_to(t('idv.form.activate_by_mail'), verify_usps_path))
+- if FeatureManagement.enable_usps_verification?
+    = render 'verification_options'
 
 = render @view_model.modal_partial, view_model: @view_model
