--- a/app/views/verify/address/index.html.slim
+++ b/app/views/verify/address/index.html.slim
@@ -7,8 +7,9 @@ p
   .sm-col.sm-col-12.md-col-6
     = link_to t('idv.buttons.activate_by_phone'), verify_phone_path,
       class: 'btn btn-primary mb2 center inline-block'
-  .sm-col.sm-col-12.md-col-6
-    = link_to t('idv.buttons.activate_by_mail'), verify_usps_path,
-      class: 'btn btn-outline rounded-lg mb2 center'
+  - if FeatureManagement.enable_usps_verification?
+    .sm-col.sm-col-12.md-col-6
+      = link_to t('idv.buttons.activate_by_mail'), verify_usps_path,
+        class: 'btn btn-outline rounded-lg mb2 center'
 
 = render 'shared/cancel', link: verify_cancel_path
