--- a/app/assets/stylesheets/components/_util.scss
+++ b/app/assets/stylesheets/components/_util.scss
@@ -19,6 +19,14 @@
   vertical-align: middle;
 }
 
+.block-center {
+  margin: 0 auto;
+}
+
+.scale-down {
+  transform: scale(.8);
+}
+
 @media #{$breakpoint-sm} {
   // scss-lint:disable ImportantRule
   .sm-display-inline-block { display: inline-block !important; }
