--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,13 +1,20 @@
+- reset_context = loa3_requested? ? 'loa3' : 'basic'
+
 - title t('titles.passwords.forgot')
 
-h1.h3.my0 = t('headings.passwords.forgot')
+h1.h3.my0 = t("headings.passwords.forgot.#{reset_context}")
 p.mt-tiny.mb0#email-description
-  = t('instructions.password.forgot')
+  = t("instructions.password.forgot.#{reset_context}")
 = simple_form_for(@password_reset_email_form,
                   url: user_password_path,
                   html: { autocomplete: 'off', method: :post, role: 'form' }) do |f|
 
-  = f.input :email, required: true, input_html: { 'aria-describedby': 'email-description' }
+  = f.input :email, required: true, label: t('forms.email.label'),
+            input_html: { 'aria-describedby': 'email-description' }
   = f.button :submit, t('forms.buttons.continue'), class: 'mt2'
 
-= render 'shared/cancel', link: new_user_session_path
+- if loa3_requested?
+  .mt2.pt1.border-top
+    = link_to 'cancel', root_path
+- else
+  = render 'shared/cancel', link: new_user_session_path
