Fix specs, add more xlations, redirect to account
**Why**: We redirect to account after a valid otp because we are getting
rid of the current account reactivation screen, and we need users to be
able to easily choose between recovering their account with a personal
key or by reverifying

--- a/app/assets/stylesheets/components/_util.scss
+++ b/app/assets/stylesheets/components/_util.scss
@@ -24,7 +24,9 @@
 }
 
 .scale-down {
-  transform: scale(.8);
+  // trigger anti-aliasing in chrome
+  backface-visibility: hidden;
+  transform: scale(.7);
 }
 
 @media #{$breakpoint-sm} {
