--- a/app/views/partials/personal_key/_key.slim
+++ b/app/views/partials/personal_key/_key.slim
@@ -1,4 +1,4 @@
-#personal-key(class="col-12 border-box mt4 mb3 py2 px2 sm-px4 fs-20p sans-serif\
+#personal-key(class="col-12 border-box py2 px2 sm-px4 fs-20p sans-serif\
                       border border-dashed border-red rounded-xl relative clearfix")
   = image_tag asset_url('scissors.svg'), width: 24,
     class: 'absolute ico-scissors'
