--- a/app/views/users/reactivate_account/index.html.slim
+++ b/app/views/users/reactivate_account/index.html.slim
@@ -1,4 +1,4 @@
-- title t('titles.reactivate_profile')
+- title t('titles.reactivate_account')
 
 h1.h3.my0 = t('forms.reactivate_profile.title')
 p.mt-tiny.mb0 = t('forms.reactivate_profile.instructions')
