--- a/app/views/reactivate_account/index.html.slim
+++ b/app/views/reactivate_account/index.html.slim
@@ -15,8 +15,8 @@ p.mb0 = t('instructions.account.reactivate.explanation')
 
 .block-center.center.col-10
   .col-12.mb2
-    = link_to t('links.account.reactivate.with_key'), reactivate_account_path,
+    = link_to t('links.account.reactivate.with_key'), verify_personal_key_path,
       class: 'btn btn-primary block'
-  = form_tag manage_reactivate_account_path, method: :put, class: 'col-12' do
+  = form_tag reactivate_account_path, method: :put, class: 'col-12' do
     = button_tag t('links.account.reactivate.without_key'), type: 'submit',
       class: 'btn btn-secondary block col-12'
