--- a/app/assets/stylesheets/components/_personal-key.scss
+++ b/app/assets/stylesheets/components/_personal-key.scss
@@ -1,3 +1,14 @@
+.key-badge::before {
+  background-image: url(image-path('p-key.svg'));
+  background-repeat: no-repeat;
+  content: '';
+  height: 60px;
+  left: 45%;
+  position: absolute;
+  top: -25px;
+  width: 60px;
+}
+
 .separator-text > div {
   &::after {
     color: $silver;
