--- a/app/assets/stylesheets/variables/_colors.scss
+++ b/app/assets/stylesheets/variables/_colors.scss
@@ -1,6 +1,7 @@
 $aqua: #7fdbff !default;
 $blue: #0071bb !default;
 $blue-light: #ebf3fa !default;
+$blue-lighter: #ecfcff !default;
 $blue-lightest: #f2f9ff !default;
 $navy: #112e51 !default;
 $teal: #00bfe7 !default;
