--- a/app/views/accounts/_password_reset.html.slim
+++ b/app/views/accounts/_password_reset.html.slim
@@ -1,3 +1,3 @@
 .mb4.alert.alert-warning
   p = t('account.index.reactivation.instructions')
-  p.mb0 = link_to t('account.index.reactivation.link'), manage_reactivate_account_path
+  p.mb0 = link_to t('account.index.reactivation.link'), reactivate_account_path
