--- a/app/views/shared/_personal_key_confirmation_modal.html.slim
+++ b/app/views/shared/_personal_key_confirmation_modal.html.slim
@@ -8,16 +8,7 @@
         = t('users.personal_key.confirmation_error')
 
       form(id='confirm-key' method='post' action="#{update_path}" name="key-confirm")
-        input(
-          aria-label="#{t('forms.personal_key.confirmation_label')}"
-          maxlength="#{code.length}"
-          autocomplete='off'
-          class='col-12 mb4 border-dashed field monospace personal-key caps'
-          name="personal-key"
-          pattern="^#{PersonalKeyFormatter.regexp_string}$"
-          required=true
-          spellcheck='false'
-          type='text')
+        = render 'shared/personal_key_input', code: code
         = hidden_field_tag :authenticity_token, form_authenticity_token
 
         .clearfix.mxn2
