--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -5,4 +5,5 @@
 @media #{$breakpoint-sm} {
   .sm-bg-light-blue { background-color: $blue-light; }
   .sm-bg-none { background-color: transparent; }
+  .sm-bg-navy { background-color: $navy; }
 }
