--- a/app/views/users/verify_personal_key/new.html.slim
+++ b/app/views/users/verify_personal_key/new.html.slim
@@ -6,11 +6,13 @@
 
       = render 'shared/personal_key_input', code: ''
       = hidden_field_tag :authenticity_token, form_authenticity_token
-    .mt2
-      = t('forms.personal_key.alternative')
-      = button_to(t('links.reverify'), { method: :put,
-          url: reactivate_account_path }, class: 'btn btn-link ml1')
-      .mt4
-        = button_tag t('forms.buttons.continue'), type: 'submit', class: 'btn btn-primary btn-wide'
+
+    .mt3
+      = button_tag t('forms.buttons.continue'), type: 'submit', class: 'btn btn-primary btn-wide'
+
+.mt2
+  = t('forms.personal_key.alternative')
+  = button_to(t('links.reverify'), reactivate_account_path, method: :put,
+    class: 'btn btn-link ml1', form_class: 'inline-block')
 
 = render 'shared/cancel', link: account_path
