--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,5 +11,13 @@
 
   @media #{$breakpoint-sm} {
     border-radius: 5px;
+
+    &-wide {
+      margin-top: $space-4;
+      max-width: 100%;
+      padding-bottom: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
 }
