Remove US country code from phone validation
**Why**: In order to support internation numbers, we need to remove the
validation that requires phone numbers have a US country code

Remove US country code from phone normalization

**Why**: We want to allow users to have internation numbers, which means
we need to be prepared to format internation numbers.

Add control for selecting international code

**Why**: Users need to be able to specify their international code so
that we can:

1. Communicate to them whether voice OTP is supported for their country
2. Validate their phone number is properly formatted

Make app aware of intl voice unsupported numbers

**Why**: The app needs to know which international numbers don't support
voice calling so it can render an error in those cases.

Validate phone numbers are valid for intl codes

**Why**: We want to make sure that the phones the users are entering are
plausible phone numbers

**How**: Format phones for their international code before validating
them in the phone forms

Add intl code dropdown to update phone form

**Why**: So that users can select an international phone code when
updating their 2FA phone

--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -8,6 +8,11 @@ p.mt-tiny.mb0
     data: { unsupported_area_codes: @unsupported_area_codes },
     method: :patch,
     url: phone_setup_path) do |f|
+  .clearfix
+    .sm-col.sm-col-8
+      = f.input :international_code,
+        collection: international_phone_codes,
+        include_blank: false
   = f.label :phone, class: 'block'
     strong.left = t('devise.two_factor_authentication.otp_phone_label')
     span#otp_phone_label_info.ml1.italic
