--- a/app/assets/javascripts/misc/i18n-strings.js.erb
+++ b/app/assets/javascripts/misc/i18n-strings.js.erb
@@ -1,6 +1,10 @@
 window.LoginGov = window.LoginGov || {};
 
 <% keys = [
+  'devise.two_factor_authentication.otp_delivery_preference.instruction',
+  'devise.two_factor_authentication.otp_delivery_preference.phone_unsupported',
+  'devise.two_factor_authentication.otp_phone_label_info',
+  'devise.two_factor_authentication.otp_phone_label_info_modile_only',
   'errors.messages.format_mismatch',
   'errors.messages.missing_field',
   'forms.passwords.show',
