--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -5,11 +5,13 @@ p.mt-tiny.mb0
   = t('devise.two_factor_authentication.otp_setup_html')
 = simple_form_for(@two_factor_setup_form,
     html: { autocomplete: 'off', role: 'form' },
+    data: { unsupported_area_codes: @unsupported_area_codes },
     method: :patch,
     url: phone_setup_path) do |f|
   = f.label :phone, class: 'block'
     strong.left = t('devise.two_factor_authentication.otp_phone_label')
-    span.ml1.italic = t('devise.two_factor_authentication.otp_phone_label_info')
+    span#otp_phone_label_info.ml1.italic
+      = t('devise.two_factor_authentication.otp_phone_label_info')
   = f.input :phone, as: :tel, label: false, required: true,
       input_html: { class: 'phone sm-col-8 mb4' }
   .mb3
@@ -25,7 +27,8 @@ p.mt-tiny.mb0
           = radio_button_tag 'two_factor_setup_form[otp_delivery_preference]', :voice
           span.indicator
           = t('devise.two_factor_authentication.otp_delivery_preference.voice')
-      p.mt1.mb0 = t('devise.two_factor_authentication.otp_delivery_preference.instruction')
+      p#otp_delivery_preference_instruction.mt1.mb0
+        = t('devise.two_factor_authentication.otp_delivery_preference.instruction')
   = f.button :submit, t('forms.buttons.send_security_code')
 
 = render 'shared/cancel', link: destroy_user_session_path
