--- a/app/assets/stylesheets/components/_space-misc.scss
+++ b/app/assets/stylesheets/components/_space-misc.scss
@@ -8,11 +8,14 @@
 .pb-tiny { padding-bottom: $space-tiny; }
 .pt-tiny { padding-top: $space-tiny; }
 .px-tiny { padding-left: $space-tiny; padding-right: $space-tiny; }
+.py-tiny { padding-bottom: $space-tiny; padding-top: $space-tiny; }
 
 .mb-12p { margin-bottom: 12px; }
 .mt-12p { margin-top: 12px; }
 .px-12p { padding-left: 12px; padding-right: 12px; }
 .py-12p { padding-bottom: 12px; padding-top: 12px; }
+
+.pl-24p { padding-left: 24px; }
 
 .mb-40p { margin-bottom: 40px; }
 
