Add OTP delivery prefence to update phone form
**Why**: So the user can select an OTP delivery preference for their new
phone number.

Merge 2FA setup and update user phone form

**Why**: With the addition of the OTP delivery preference option, both
forms are essentially identical and can be served by a single class.

Use submitted phone if phone is invalid

**Why**: The phone number formatting and validations mutates the phone
number on the user phone form. This can cause weird errors, especially
when the country code doesn't match the phone number. For example,
`+212-123-456-7890` becomes `+212-212-123-456-7890` after formatting.
This commit uses the submitted value instead of the formatted value when
the phone is invalid to prevent this.

--- a/app/views/users/two_factor_authentication_setup/index.html.slim
+++ b/app/views/users/two_factor_authentication_setup/index.html.slim
@@ -3,9 +3,9 @@
 h1.h3.my0 = t('devise.two_factor_authentication.two_factor_setup')
 p.mt-tiny.mb0
   = t('devise.two_factor_authentication.otp_setup_html')
-= simple_form_for(@two_factor_setup_form,
+= simple_form_for(@user_phone_form,
     html: { autocomplete: 'off', role: 'form' },
-    data: { unsupported_area_codes: @unsupported_area_codes,
+    data: { unsupported_area_codes: unsupported_area_codes,
       international_phone_form: true },
     method: :patch,
     url: phone_setup_path) do |f|
@@ -21,21 +21,7 @@ p.mt-tiny.mb0
       = t('devise.two_factor_authentication.otp_phone_label_info')
   = f.input :phone, as: :tel, label: false, required: true,
       input_html: { class: 'phone sm-col-8 mb4' }
-  .mb3
-    fieldset.m0.p0.border-none
-      legend.mb1.h4.serif.bold = t('devise.two_factor_authentication.otp_delivery_preference.title')
-      label.btn-border.col-12.sm-col-5.sm-mr2.mb2.sm-mb0
-        .radio
-          = radio_button_tag 'two_factor_setup_form[otp_delivery_preference]', :sms, checked: true
-          span.indicator
-          = t('devise.two_factor_authentication.otp_delivery_preference.sms')
-      label.btn-border.col-12.sm-col-5
-        .radio
-          = radio_button_tag 'two_factor_setup_form[otp_delivery_preference]', :voice
-          span.indicator
-          = t('devise.two_factor_authentication.otp_delivery_preference.voice')
-      p#otp_delivery_preference_instruction.mt1.mb0
-        = t('devise.two_factor_authentication.otp_delivery_preference.instruction')
+  = render 'users/shared/otp_delivery_preference_selection'
   = f.button :submit, t('forms.buttons.send_security_code')
 
 = render 'shared/cancel', link: destroy_user_session_path
