--- a/app/views/users/phones/edit.html.slim
+++ b/app/views/users/phones/edit.html.slim
@@ -2,16 +2,21 @@
 
 
 h1.h3.my0 = t('headings.edit_info.phone')
-= simple_form_for(@update_user_phone_form,
-    data: { unsupported_area_codes: @unsupported_area_codes,
+= simple_form_for(@user_phone_form,
+    html: { autocomplete: 'off', method: :put, role: 'form' },
+    data: { unsupported_area_codes: unsupported_area_codes,
       international_phone_form: true },
-    url: manage_phone_path,
-    html: { autocomplete: 'off', method: :put, role: 'form' }) do |f|
+    url: manage_phone_path) do |f|
   = f.input :international_code,
         collection: international_phone_codes,
         include_blank: false,
         input_html: { class: 'international-code' }
+  = f.label :phone
+    strong.left = t('account.index.phone')
+    span#otp_phone_label_info.ml1.italic
+      = t('devise.two_factor_authentication.otp_phone_label_info')
   = f.input :phone, as: :tel, required: true, input_html: { class: 'phone', value: nil },
-    label: t('account.index.phone')
+    label: false
+  = render 'users/shared/otp_delivery_preference_selection'
   = f.button :submit, t('forms.buttons.submit.confirm_change'), class: 'mt2'
 = render 'shared/cancel', link: account_path
