--- a/app/views/shared/refresh.html.slim
+++ b/app/views/shared/refresh.html.slim
@@ -4,4 +4,8 @@
 h2 = t('idv.messages.loading')
 
 .loading-spinner
-  img src="#{image_path('spinner.gif')}" height=100 width=100 alt=""
+  img { src="#{image_path('spinner.gif')}"
+        srcset="#{image_path('spinner@2x.gif')} 2x"
+        height="144"
+        width="144"
+        alt="" }
