--- a/app/views/shared/_nav_branded.html.slim
+++ b/app/views/shared/_nav_branded.html.slim
@@ -1,6 +1,5 @@
 nav.nav-branded.vertical-align.bg-light-blue.center.relative
-  = image_tag(asset_url('logo.svg'), height: 14,
-    alt: APP_NAME, class: 'inline-block align-middle')
+  = image_tag(asset_url('logo.svg'), height: 14)
   .px-12p.inline-block
     span.absolute.top-0.bottom-0.border-right.my1.sm-my2
   = image_tag(asset_url("sp-logos/#{decorated_session.sp_logo}"), height: 40,
