--- a/app/views/verify/usps/index.html.slim
+++ b/app/views/verify/usps/index.html.slim
@@ -11,6 +11,11 @@
       = t('idv.messages.usps.success')
 
 = button_to @decorated_usps.button, verify_usps_path, method: 'put',
-  class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2'
+  class: 'btn btn-primary btn-wide', form_class: 'inline-block mr2 mb2'
 
-= link_to t('idv.messages.usps.bad_address'), verify_phone_path
+.border-top.pt1
+  = t('idv.form.no_alternate_phone_html',
+    link: link_to(t('idv.form.activate_by_phone'), verify_phone_path))
+
+.mt2
+  = link_to t('idv.buttons.return_to_verify'), verify_address_path
