Import stylesheets from style-guide

--- a/app/assets/stylesheets/email.css.scss
+++ b/app/assets/stylesheets/email.css.scss
@@ -1,5 +1,4 @@
-@import 'variables/colors';
-@import 'variables/email';
+@import 'identity-style-guide/src/css/email';
 
 @import 'foundation-emails';
 
