--- a/app/assets/stylesheets/email.css.scss
+++ b/app/assets/stylesheets/email.css.scss
@@ -1,4 +1,5 @@
-@import 'identity-style-guide/src/css/email';
+@import 'variables/colors';
+@import 'variables/email';
 
 @import 'foundation-emails';
 
