--- a/app/views/verify/_no_sp_hardfail.html.slim
+++ b/app/views/verify/_no_sp_hardfail.html.slim
@@ -6,5 +6,4 @@
     class: 'btn btn-primary btn-wide'
 hr.mt2
 .mt2
-  | <
-  = link_to ' Return to your login.gov profile', profile_path
+  = link_to t('idv.messages.return_to_profile', app: APP_NAME), profile_path
