Use _url helper, not _path when redirecting
**Why**: For consistency. We've been using a mix of both.

--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -21,4 +21,4 @@ p.mt-tiny.mb0#email-description
   = f.button :submit, t('forms.buttons.continue'), class: 'mt2'
 
 .mt2.pt1.border-top
-  = link_to t('links.cancel'), decorated_session.cancel_link_path, class: 'h5'
+  = link_to t('links.cancel'), decorated_session.cancel_link_url, class: 'h5'
